--- a/src/pages/ServiceRules/UI/styles.module.scss
+++ b/src/pages/ServiceRules/UI/styles.module.scss
@@ -2,7 +2,8 @@
   margin-top: calc(var(--margin-section-xl) / 2);
   margin-bottom: var(--margin-section-xl);
   display: grid;
-  grid-auto-flow: row;
+  // height: 80vh;
+  // grid-template-rows: min-content 1fr;
   gap: 40px;
 
   @media (max-width: 992px) {
@@ -24,126 +25,5 @@
   @media (max-width: 375px) {
     margin-top: calc(var(--margin-section-xs) / 2);
     margin-bottom: var(--margin-section-xs);
-  }
-
-  .title {
-    font-size: var(--font-size-title-main-xl);
-    font-weight: 600;
-    text-align: center;
-    text-transform: uppercase;
-
-    @media (max-width: 992px) {
-      font-size: var(--font-size-title-main-lg);
-    }
-
-    @media (max-width: 768px) {
-      font-size: var(--font-size-title-main-md);
-    }
-
-    @media (max-width: 576px) {
-      font-size: var(--font-size-title-main-sm);
-      font-weight: 500;
-    }
-
-    @media (max-width: 375px) {
-      font-size: var(--font-size-title-main-xs);
-    }
-  }
-
-  .content__wrapper {
-    display: grid;
-    grid-auto-flow: row;
-    gap: 20px;
-    border-radius: 30px;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
-    overflow: hidden;
-    padding: 40px;
-    backdrop-filter: blur(20px);
-    background: rgba(255, 255, 255, 0.5);
-
-    @media (max-width: 576px) {
-      padding: 16px;
-    }
-
-    .subtitle {
-      font-size: var(--row-gap-title-xl);
-      font-weight: 500;
-      text-align: center;
-
-      @media (max-width: 992px) {
-        font-size: var(--row-gap-title-lg);
-      }
-
-      @media (max-width: 768px) {
-        font-size: var(--row-gap-title-md);
-      }
-
-      @media (max-width: 576px) {
-        font-size: var(--row-gap-title-sm);
-        font-weight: 500;
-      }
-
-      @media (max-width: 375px) {
-        font-size: var(--row-gap-title-xs);
-      }
-    }
-
-    .date {
-      font-size: 14px;
-
-      @media (max-width: 768px) {
-        font-size: 12px;
-      }
-
-      @media (max-width: 576px) {
-        font-size: 10px;
-      }
-    }
-
-    .description {
-      font-size: 16px;
-      font-weight: 600;
-      display: grid;
-      grid-auto-flow: row;
-      gap: 10px;
-
-      @media (max-width: 768px) {
-        font-size: 14px;
-      }
-    }
-
-    .content {
-      display: grid;
-      grid-auto-flow: row;
-      gap: 15px;
-
-      .option {
-        display: grid;
-        grid-auto-flow: row;
-        gap: 10px;
-
-        > h4 {
-          font-size: 16px;
-          font-weight: 600;
-          text-transform: uppercase;
-
-          @media (max-width: 576px) {
-            font-size: 14px;
-            text-align: center;
-          }
-        }
-
-        &__sub {
-          display: grid;
-          grid-auto-flow: row;
-          gap: 5px;
-          font-size: 14px;
-
-          @media (max-width: 576px) {
-            font-size: 12px;
-          }
-        }
-      }
-    }
   }
 }
