--- a/src/widgets/wallet/wallets-bar/styles.module.scss
+++ b/src/widgets/wallet/wallets-bar/styles.module.scss
@@ -1,5 +1,5 @@
 .wallets {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
+  grid-template-rows: repeat(3, 1fr);
+  row-gap: 10px;
 }
